# Pleias-Rag

./: .gitignore  README.md  pyproject.toml
data/lancedb/chunks.lance/_transactions/: 0-e69e0a62-9214-49e6-8925-e2198fdd2d49.txn  1-6c75df24-8078-4049-a60e-e57fd97d4d6f.txn
data/lancedb/chunks.lance/_versions/: 1.manifest  2.manifest
data/lancedb/chunks.lance/data/: 41c4a8c7-8301-49f5-b8fa-a6d8a4114b30.lance  c706629d-9feb-4682-b989-c71aa6e5c6a7.lance
src/Pleias-Rag/: RagDatabase.py
src/Pleias-Rag/database_chunking_strategies/: BasicChunker.py
src/Pleias_Rag/: RagDatabase.py  RagSystem.py  __init__.py  generate.py  main.py  test_rag_database.py
src/Pleias_Rag/database_chunking_strategies/: BaseChunker.py  BasicChunker.py  __init__.py  chunk_text.py
test_data/lancedb/chunks.lance/_transactions/: 0-4bb62d57-d3a2-4dca-be95-872e25706ed4.txn  1-d416282f-0eb2-4ce4-911b-e4dd0de5e374.txn  2-d6aec8a5-102b-4d39-96c4-88b486f0a8ef.txn
test_data/lancedb/chunks.lance/_versions/: 1.manifest  2.manifest  3.manifest
test_data/lancedb/chunks.lance/data/: 06569cca-4cab-409e-86bd-3c2faf216cdc.lance  371a62e8-d9f1-47ba-ac9d-a862e03be6e0.lance
tests/: DatabaseTest.py  test_database.py.py
